<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        app:showAsAction="withText"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        app:showAsAction="withText"
        android:title="@string/cart" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_order"
        android:title="@string/order" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>