<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custtom_layer"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="17dp">

    <ImageView
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_20dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/icon_remove_20px" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/cancel_order_title"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dimen_10dp"
        android:background="#2C717171" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/medium_bold_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Lý do hủy: " />

            <RadioButton
                android:id="@+id/wrong_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_tịme" />

            <RadioButton
                android:id="@+id/wrong_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_intent" />

            <RadioButton
                android:id="@+id/wrong_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_address" />

            <RadioButton
                android:id="@+id/wrong_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_order" />

            <RadioButton
                android:id="@+id/wrong_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_other" />


        </RadioGroup>

        <TextView
            style="@style/medium_bold_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Giải thích thêm: " />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtMoreReason"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/not_required"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dimen_10dp"
        android:background="#2C717171" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnClose"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/dimen_17dp"
            app:cardBackgroundColor="@color/background_silver"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/primary_color"
                android:textSize="15sp"
                android:textStyle="bold"

                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnRemove"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="@dimen/dimen_17dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel_order_action"
                android:textColor="@color/primary_background"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>