<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:background="@drawable/circle_shape"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"/>

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create"
        android:textSize="@dimen/title_signin_signup"
        android:layout_below="@id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/txtemail"
        android:padding="@dimen/padding"
        android:background="@drawable/border"
        android:inputType="textEmailAddress"
        android:layout_below="@id/textViewCreateAccount"
        android:layout_marginTop="@dimen/margin_top"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/txtpass"
        android:padding="@dimen/padding"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="@dimen/margin_top"/>

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="@dimen/margin_top"/>

    <Button
        android:id="@+id/buttonSign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:layout_below="@id/checkBoxRememberMe"
        android:layout_marginTop="@dimen/margin_top"/>


    <TextView
        android:id="@+id/continuewith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or continue with"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonSign_up"
        android:layout_marginTop="@dimen/margin_top"/>

    <LinearLayout
        android:id="@+id/lnfbgg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/continuewith"
        android:layout_marginTop="@dimen/margin_top">

        <Button
            android:id="@+id/buttonLoginWithFacebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Facebook"/>

        <Button
            android:id="@+id/buttonLoginWithGoogle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Google"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lnfbgg"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textViewAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/button_signin"
            android:textColor="@color/black" />

    </LinearLayout>


</RelativeLayout>
